Cheques App code commit all files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,32 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+  <h2>Cheques List</h2>
+  <p></p>            
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Date</th>
+        <th>Amount</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="cheques_body">
+     <!--  <tr>
+        <td>1</td>
+        <td>Test</td>
+        <td>01/04/2017</td>
+        <td>$ 1,643.23</td>
+        <td><a href="/" class="btn btn-info">View</a></td>
+      </tr> -->
+    </tbody>
+  </table>
+</div>
 
     <script type="text/javascript" src="lib/jquery/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
