--- a/cheque_details.html
+++ b/cheque_details.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="css/app.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,8 +17,16 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Cheque Detail Page</h1>
-
+    <!-- <h1>Cheque Detail Page</h1> -->
+    <div class="container-fluid">
+      <div class="panel panel-primary" id="cheque_details_panel">
+        <div class="panel-heading">Cheque Details</div>
+        <div class="panel-body" id="cheque_details_body">
+        
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="lib/jquery/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/display.js"></script>
   </body>
 </html>
